# Tiny-Lab

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: research.md
.claude/hooks/: bump-version-reminder.sh  command_paths.py  ref_verify.py  state_advance.py  state_policy.py
.codex/: hooks.json
docs/: architecture.md  codex-backend-run-issues.md  scm-codex-clean-run-issues.md  tiny-lab-runtime-research-issues.md  v5-architecture.md  v7-design.md
prompts/: data_deep_dive.md  phase_code.md  story_tell.md
prompts/_shared/: ml_researcher_rubric.md  shape_full.md
prompts/ideate/: diverge.md  handoff.md  handoff_inline.md  select.md  shape_lite.md
prompts/novel/: method_design.md
prompts/review/: professor_review.md  scope.md  taxonomy.md
research/: agent.md  hypothesis_queue.md  hypothesis_queue.yaml  project.yaml
src/tiny_lab/: __init__.py  advancement.py  baseline.py  build.py  claims.py  cli.py  conditions.py  constraints.py  dashboard.py  engine.py  envutil.py  errors.py  evaluate.py  events.py  evidence.py  final_paper.py  gates.py  generate.py  ledger.py  lock.py  logging.py  loop.py  migrate.py  optimize.py  paths.py  phase_contract.py  pipeline.py  plan.py  processes.py  project.py  provenance.py  quality.py  queue.py  refs.py  report.py  result_schema.py  review.py  run.py  runner_contract.py  runtime_placeholders.py  (+5 more)
tests/tiny_lab/: test_advancement.py  test_backends.py  test_baseline.py  test_build.py  test_claims.py  test_cli.py  test_conditions.py  test_lock.py  (+32 more)
(+105 files in other folders)
