[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-lab"
version = "6.5.1"
description = "Plan-driven AI research loop"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mlx = ["mlx>=0.29", "numpy>=2.0"]
dev = ["pytest>=8.0"]

[project.scripts]
tiny-lab = "tiny_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_lab"]

[tool.hatch.build.targets.wheel.force-include]
"src/tiny_lab/presets" = "tiny_lab/presets"
"src/tiny_lab/prompts" = "tiny_lab/prompts"
"src/tiny_lab/hooks" = "tiny_lab/hooks"
"src/tiny_lab/templates" = "tiny_lab/templates"
